Resolves: tdf#151753 'revert coverity#1212509 Logically dead code'

revert 0d6f45377592a62ff4ee510d5fbd3bdd9e20160a:

    coverity#1212509 Logically dead code

Change-Id: I8eb7355a94ce2c93faa18c77be63de41bccd3a99
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144159
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 6880d32d851783a56c977872df5fbf11b507876a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144129
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>